Fix visibility of buttons on dark background.

--- a/src/skin/aios_buttons.css
+++ b/src/skin/aios_buttons.css
@@ -5,7 +5,7 @@ toolbarbutton.toolbarbutton-1.aios-tbutton:not(#downloads-button):not(#bookmarks
   list-style-image: url("toolbar.svg");
 }
 toolbar:-moz-lwtheme-brighttext toolbarbutton.toolbarbutton-1.aios-tbutton:not(#downloads-button):not(#bookmarks-button):not(#history-button),
-toolbar[brighttext] toolbarbutton.toolbarbutton-1.aios-tbutton::not(#downloads-button):not(#bookmarks-button):not(#history-button):not(#addons-button):not(#remotetabs-button) {
+toolbar[brighttext] toolbarbutton.toolbarbutton-1.aios-tbutton:not(#downloads-button):not(#bookmarks-button):not(#history-button):not(#addons-button):not(#remotetabs-button) {
   list-style-image: url("toolbar-inverted.svg");
 }
 #multipanel-button {
